--- a/International dept analysis/SQL.ipynb
+++ b/International dept analysis/SQL.ipynb
@@ -43,8 +43,10 @@
    "outputs": [],
    "source": [
     "%%sql\n",
+    "postgresql:///international_debt\n",
+    "    \n",
     "SELECT \n",
-    "    count(distinct country_name) AS num_countries\n",
+    "    count(distinct country_name) AS total_distinct_countries\n",
     "FROM international_debt;"
    ]
   },
@@ -54,6 +56,122 @@
    "source": [
     "## 3. Finding out the distinct debt indicators\n",
     "We can see there are a total of 124 countries present on the table. As we saw in the first section, there is a column called indicator_name that briefly specifies the purpose of taking the debt. Just beside that column, there is another column called indicator_code which symbolizes the category of these debts. Knowing about these various debt indicators will help us to understand the areas in which a country can possibly be indebted to."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "select distinct\n",
+    " indicator_code as distinct_debt_indicators\n",
+    "from international_debt\n",
+    "order by indicator_code;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Totaling the amount of debt owed by the countries\n",
+    "As mentioned earlier, the financial debt of a particular country represents its economic state. But if we were to project this on an overall global scale, how will we approach it?\n",
+    "\n",
+    "Let's switch gears from the debt indicators now and find out the total amount of debt (in USD) that is owed by the different countries. This will give us a sense of how the overall economy of the entire world is holding up.#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "SELECT \n",
+    "    round(sum(debt)/1000000,2) as total_debt\n",
+    "FROM international_debt; "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Country with the highest debt\n",
+    "\"Human beings cannot comprehend very large or very small numbers. It would be useful for us to acknowledge that fact.\" - Daniel Kahneman. That is more than 3 million million USD, an amount which is really hard for us to fathom.\n",
+    "\n",
+    "Now that we have the exact total of the amounts of debt owed by several countries, let's now find out the country that owns the highest amount of debt along with the amount. Note that this debt is the sum of different debts owed by a country across several categories. This will help to understand more about the country in terms of its socio-economic scenarios. We can also find out the category in which the country owns its highest debt. But we will leave that for now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "SELECT \n",
+    "    country_name ,\n",
+    "    sum(debt)as total_debt\n",
+    "FROM international_debt\n",
+    "GROUP BY country_name\n",
+    "ORDER BY sum(debt) desc\n",
+    "limit 1;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Average amount of debt across indicators\n",
+    "So, it was China. A more in-depth breakdown of China's debts can be found here.\n",
+    "\n",
+    "We now have a brief overview of the dataset and a few of its summary statistics. We already have an idea of the different debt indicators in which the countries owe their debts. We can dig even further to find out on an average how much debt a country owes? This will give us a better sense of the distribution of the amount of debt across different indicators."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "SELECT indicator_code as debt_indicator\n",
+    "        ,indicator_name \n",
+    "        ,avg(debt) as average_debt\n",
+    "FROM international_debt\n",
+    "GROUP BY indicator_code \n",
+    "        ,indicator_name \n",
+    "ORDER BY avg(debt) desc\n",
+    "limit 10;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. The highest amount of principal repayments\n",
+    "We can see that the indicator DT.AMT.DLXF.CD tops the chart of average debt. This category includes repayment of long term debts. Countries take on long-term debt to acquire immediate capital. More information about this category can be found here.\n",
+    "\n",
+    "An interesting observation in the above finding is that there is a huge difference in the amounts of the indicators after the second one. This indicates that the first two indicators might be the most severe categories in which the countries owe their debts.\n",
+    "\n",
+    "We can investigate this a bit more so as to find out which country owes the highest amount of debt in the category of long term debts (DT.AMT.DLXF.CD). Since not all the countries suffer from the same kind of economic disturbances, this finding will allo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "SELECT \n",
+    "    country_name ,\n",
+    "    indicator_name\n",
+    "FROM international_debt\n",
+    "WHERE debt = (SELECT max(debt) as dept\n",
+    "             FROM international_debt\n",
+    "            where indicator_code ='DT.AMT.DLXF.CD');"
    ]
   }
  ],
