--- a/International dept analysis/SQL.ipynb
+++ b/International dept analysis/SQL.ipynb
@@ -173,6 +173,65 @@
     "             FROM international_debt\n",
     "            where indicator_code ='DT.AMT.DLXF.CD');"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. The most common debt indicator\n",
+    "China has the highest amount of debt in the long-term debt (DT.AMT.DLXF.CD) category. This is verified by The World Bank. It is often a good idea to verify our analyses like this since it validates that our investigations are correct.\n",
+    "\n",
+    "We saw that long-term debt is the topmost category when it comes to the average amount of debt. But is it the most common indicator in which the countries owe their debt? Let's find that out."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "select indicator_code\n",
+    "        ,count(indicator_code) as indicator_count\n",
+    "from international_debt\n",
+    "group by indicator_code\n",
+    "order by count(indicator_code)  desc, indicator_code desc\n",
+    "limit 20;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9. Other viable debt issues and conclusion\n",
+    "There are a total of six debt indicators in which all the countries listed in our dataset have taken debt. The indicator DT.AMT.DLXF.CD is also there in the list. So, this gives us a clue that all these countries are suffering from a common economic issue. But that is not the end of the story, but just a part of the story.\n",
+    "\n",
+    "Let's change tracks from debt_indicators now and focus on the amount of debt again. Let's find out the maximum amount of debt that each country has. With this, we will be in a position to identify the other plausible economic issues a country might be going through.\n",
+    "\n",
+    "In this notebook, we took a look at debt owed by countries across the globe. We extracted a few summary statistics from the data and unraveled some interesting facts and figures. We also validated our findings to make sure the investigations are correct."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "select country_name\n",
+    "        ,max(debt) as maximum_debt\n",
+    "from international_debt\n",
+    "group by country_name\n",
+    "order by max(debt)  desc, country_name desc\n",
+    "limit 10;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
