--- a/Simple Chatty Bot/Bot.ipynb
+++ b/Simple Chatty Bot/Bot.ipynb
@@ -250,18 +250,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! My name is Aid.\n",
+      "I was created in 2020.\n",
+      "Please, remind me your name.\n"
+     ]
     }
    ],
    "source": [
@@ -324,6 +323,13 @@
     "test()\n",
     "end()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
